--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "main": "src/index.js",
   "dependencies": {
     "axios": "1.1.3",
+    "firebase": "^9.12.1",
     "framer-motion": "1.10.3",
     "lodash-move": "1.1.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-scripts": "3.0.1"
   },
   "devDependencies": {
